# Aero64Final

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  aero.us.splat.yaml  data_dump.toml  dump.toml
AeroRecompSyms/: README.txt  aero.us.syms.toml
Docs/: Architecture.md  Debugging.md  SystemPrompt.md  Workflow.md
Docs/RepoInjests/PilotWings64/: gcsmith-pilotwings64decomp-8a5edab282632443.txt
RecompiledFuncs/: aero_boot_chain_manual.c  funcs.h  funcs_0.c  funcs_1.c  funcs_10.c  funcs_11.c  funcs_12.c  funcs_13.c  funcs_14.c  funcs_15.c  funcs_16.c  funcs_17.c  funcs_18.c  funcs_19.c  funcs_2.c  funcs_20.c  funcs_21.c  funcs_22.c  funcs_23.c  funcs_24.c  funcs_25.c  funcs_26.c  funcs_27.c  funcs_28.c  funcs_29.c  funcs_3.c  funcs_30.c  funcs_31.c  funcs_32.c  funcs_33.c  funcs_34.c  funcs_35.c  funcs_36.c  funcs_37.c  funcs_38.c  funcs_39.c  funcs_4.c  funcs_40.c  funcs_41.c  funcs_42.c  (+44 more)
config/: aero.us.regen.toml  aero.us.symbols_track.toml  aero.us.toml
config/asm_include/: macro.inc
config/cmake/: AeroEngine.cmake  AeroSDL2.cmake  AeroStrictDebug.cmake
config/ld/: aero.us.bootstrap.ld
config/splat_guides/: aero_boot_entry_rom_00001000.fragment
include/: aero_bootstrap.h  aero_gfx_diag.h  aero_rt64_context.h  aero_runtime.h
include/librecomp/: sections.h
lib/: README.txt
src/game/: README.txt
src/host/: aero_engine_launcher.cpp  aero_gfx_diag.cpp  aero_recomp_callbacks.cpp  aero_recomp_host.cpp  aero_register_overlays.cpp  aero_rt64_render_context.cpp  recomp_runtime_stubs.cpp
src/main/: main.cpp
tools/: LAST_BUILD_COMMIT.txt  PINNED_VERSIONS.txt  README.txt
tools/patches/: aero_librecomp_game_entry_boot.patch  aero_librecomp_sp_trace.patch
tools/scripts/: _splat_split_lines.txt  append_aero_us_ignored.py  audit_recompiled_funcs.py  build_aero_us_elf.sh  build_n64recomp.ps1  fetch_aero_engine_deps.ps1  fix_aero_us_ld_ipl3_vram_end.py  gen_merged_ld.awk  gen_splat_subsegments.py  run_n64recomp_aero_us_retry.py  splat_split_aero_us.sh  splatasm_autoglabel_jal.py  splatasm_fix_jal_local_labels.py  splatasm_list_missing_jal.py  sync_aero_us_assets.sh  verify_rom_jumptable.py
tools/source/N64Recomp/include/: recomp.h
tools/source/N64Recomp/src/: analysis.cpp  elf.cpp  main.cpp  recompilation.cpp
